# thingmagic_rfid

./: CMakeLists.txt  package.xml
config/: custom_rosconsole.conf
include/thingmagic_rfid/: thing_reader.h  tm_config.h  tm_reader.h
launch/: reader.launch  reader_pioneer.launch
src/: demo_test.c  read.c  readasync.c  thing_reader.cpp  thing_reader_node.cpp  tm_reader.cpp  tm_reader_node.cpp
