<?xml version="1.0"?>
<package format="2">
  <name>thingmagic_rfid</name>
  <version>0.0.0</version>
  <description>The thingmagic_rfid package</description>
  <author email="briansbingham@gmail.com">Brian Bingham</author> -->
  <maintainer email="briansbingham@gmail.com">Brian Bingham</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/thingmagic_rfid</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
